0.4.18/_sources/api/napari.layers.Labels.rst
napari.layers.Labels
====================

.. currentmodule:: napari.layers

.. autoclass:: Labels
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Labels.as_layer_data_tuple
   
   
      ~Labels.bind_key
   
   
      ~Labels.block_history
   
   
      ~Labels.block_update_properties
   
   
      ~Labels.click_plane_from_click_data
   
   
      ~Labels.create
   
   
      ~Labels.data_setitem
   
   
      ~Labels.data_to_world
   
   
      ~Labels.fill
   
   
      ~Labels.get_color
   
   
      ~Labels.get_ray_intersections
   
   
      ~Labels.get_source_str
   
   
      ~Labels.get_status
   
   
      ~Labels.get_value
   
   
      ~Labels.new_colormap
   
   
      ~Labels.paint
   
   
      ~Labels.projected_distance_from_mouse_drag
   
   
      ~Labels.redo
   
   
      ~Labels.refresh
   
   
      ~Labels.reset_contrast_limits
   
   
      ~Labels.reset_contrast_limits_range
   
   
      ~Labels.save
   
   
      ~Labels.set_view_slice
   
   
      ~Labels.undo
   
   
      ~Labels.world_to_data
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Labels.affine
      ~Labels.attenuation
      ~Labels.blending
      ~Labels.bounding_box
      ~Labels.brush_size
      ~Labels.class_keymap
      ~Labels.color
      ~Labels.color_mode
      ~Labels.colormap
      ~Labels.colormaps
      ~Labels.contiguous
      ~Labels.contour
      ~Labels.contrast_limits
      ~Labels.contrast_limits_range
      ~Labels.cursor
      ~Labels.cursor_size
      ~Labels.custom_interpolation_kernel_2d
      ~Labels.data
      ~Labels.data_level
      ~Labels.data_raw
      ~Labels.depiction
      ~Labels.downsample_factors
      ~Labels.dtype
      ~Labels.editable
      ~Labels.experimental_clipping_planes
      ~Labels.extent
      ~Labels.features
      ~Labels.gamma
      ~Labels.help
      ~Labels.interactive
      ~Labels.interpolation
      ~Labels.interpolation2d
      ~Labels.interpolation3d
      ~Labels.iso_threshold
      ~Labels.level_shapes
      ~Labels.loaded
      ~Labels.metadata
      ~Labels.mode
      ~Labels.mouse_pan
      ~Labels.mouse_zoom
      ~Labels.n_edit_dimensions
      ~Labels.name
      ~Labels.ndim
      ~Labels.num_colors
      ~Labels.opacity
      ~Labels.plane
      ~Labels.preserve_labels
      ~Labels.properties
      ~Labels.rendering
      ~Labels.rotate
      ~Labels.scale
      ~Labels.seed
      ~Labels.selected_label
      ~Labels.shear
      ~Labels.show_selected_label
      ~Labels.source
      ~Labels.thumbnail
      ~Labels.translate
      ~Labels.translate_grid
      ~Labels.visible
      
      
      
      
   
   

   .. rubric:: Details