0.6.6/_sources/api/napari.layers.Labels.rst
napari.layers.Labels
====================

.. currentmodule:: napari.layers

.. autoclass:: Labels
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Labels.as_layer_data_tuple
   
   
      ~Labels.bind_key
   
   
      ~Labels.block_history
   
   
      ~Labels.block_update_properties
   
   
      ~Labels.click_plane_from_click_data
   
   
      ~Labels.create
   
   
      ~Labels.data_setitem
   
   
      ~Labels.data_to_world
   
   
      ~Labels.fill
   
   
      ~Labels.get_color
   
   
      ~Labels.get_ray_intersections
   
   
      ~Labels.get_source_str
   
   
      ~Labels.get_status
   
   
      ~Labels.get_value
   
   
      ~Labels.new_colormap
   
   
      ~Labels.paint
   
   
      ~Labels.paint_polygon
   
   
      ~Labels.projected_distance_from_mouse_drag
   
   
      ~Labels.redo
   
   
      ~Labels.refresh
   
   
      ~Labels.save
   
   
      ~Labels.set_view_slice
   
   
      ~Labels.swap_selected_and_background_labels
   
   
      ~Labels.undo
   
   
      ~Labels.update_highlight_visibility
   
   
      ~Labels.update_transform_box_visibility
   
   
      ~Labels.world_to_data
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Labels.ModeCallable
      ~Labels.affine
      ~Labels.axis_labels
      ~Labels.blending
      ~Labels.bounding_box
      ~Labels.brush_size
      ~Labels.brush_size_on_mouse_move
      ~Labels.class_keymap
      ~Labels.colormap
      ~Labels.contiguous
      ~Labels.contour
      ~Labels.cursor
      ~Labels.cursor_size
      ~Labels.custom_interpolation_kernel_2d
      ~Labels.data
      ~Labels.data_level
      ~Labels.data_raw
      ~Labels.depiction
      ~Labels.downsample_factors
      ~Labels.dtype
      ~Labels.editable
      ~Labels.experimental_clipping_planes
      ~Labels.extent
      ~Labels.features
      ~Labels.help
      ~Labels.iso_gradient_mode
      ~Labels.keymap
      ~Labels.level_shapes
      ~Labels.loaded
      ~Labels.metadata
      ~Labels.mode
      ~Labels.mouse_pan
      ~Labels.mouse_zoom
      ~Labels.n_edit_dimensions
      ~Labels.name
      ~Labels.ndim
      ~Labels.opacity
      ~Labels.plane
      ~Labels.preserve_labels
      ~Labels.projection_mode
      ~Labels.properties
      ~Labels.rendering
      ~Labels.rotate
      ~Labels.scale
      ~Labels.scale_factor
      ~Labels.selected_label
      ~Labels.shear
      ~Labels.show_selected_label
      ~Labels.source
      ~Labels.thumbnail
      ~Labels.translate
      ~Labels.unique_id
      ~Labels.units
      ~Labels.visible
      
      
      
      
      
   
   

   .. rubric:: Details